Thu Feb 28 13:55:04 EDT 2013 (dar)
------------------------------------
 * libclamav/pe_icons.c: introduce LOGPARSEICONDETAILS define to reduce parseicon logging in default build

Wed Feb 20 10:05:00 EDT 2013 (multiple)
------------------------------------
 * Bug reported by Felix Groebert, Mateusz Jurczyk and Gynvael Coldwind of the
 Google Security Team

Thu Feb 7 14:04:06 EDT 2013 (dar)
------------------------------------
 * Add CL_TYPE_JAVA for Java class detection, type and target

Tue Feb 5 19:38:35 EDT 2013 (dar)
------------------------------------
 * Add runtime enable/disable of SWF scanning

Tue Jan 8 12:18:35 EDT 2013 (morgan)
------------------------------------
 * Fix for CL_ENULLARG reported in regression run of 0021468992.gz

Tue Jan 2 16:06:10 EDT 2013 (dar)
----------------------------------
 * bb#5324 - restore decompression of compressed Flash files

Thu Dec 27 16:52:14 EDT 2012 (dar)
-------------------------------------
 * bb #6478: better return code for truncated ARJ

Thu Dec 27 15:23:45 EDT 2012 (morgan)
-------------------------------------
 * fix regression test 0051207685.gz bsd crash

Wed Dec 26 15:04:28 EDT 2012 (morgan)
-------------------------------------
 * fix to bb1891 patch(edge of buffer problem)

Wed Dec 19 17:15:57 EDT 2012 (swebb)
-------------------------------------
 * downgrade cacheset_remove node-not-found to debug level

Tue Dec 18 13:21:26 EDT 2012 (dar)
-------------------------------------
 * bb #6440: truncated ISO should cause format error not write error

Mon Dec 17 18:47:12 EDT 2012 (morgan)
-------------------------------------
 * fix loop in cab file processing: ensure window position within frame

Mon Dec 17 16:44:16 EDT 2012 (dar)
-------------------------------------
 * pdf: empty key safety check

Mon Dec 17 11:12:11 EDT 2012 (dar)
-------------------------------------
 * pdf: continue to next object after single object error

Mon Dec 17 11:08:50 EDT 2012 (morgan)
-------------------------------------